--- a/src/locales/fr/alexandria.json
+++ b/src/locales/fr/alexandria.json
@@ -1,55 +1,55 @@
 {
   "alexandria": {
     "siteMetadata": {
-      "description": "Explore the Alexandria testnet"
+      "description": "Explorez le testnet Alexandria"
     },
     "hero": {
-      "title": "Alexandria Network",
-      "text": "The Alexandria release focuses on important technical updates which will facilitate more efficient future development.",
-      "chipText": "What is this?"
+      "title": "Le Réseau Alexandria",
+      "text": "Alexandria se concentre sur les importantes mises à jour technique qui faciliteront plus éficace le développement futur.",
+      "chipText": "Qu’est-ce que c’est?"
     },
     "heroCard": {
-      "title": "REPLACED BY BABYLON ON"
+      "title": "REMPLACÉ PAR BABYLON ON"
     },
     "modal": {
       "title": "Alexandria",
-      "text": "There are two sphinxes at the Pompey's Pillar site in Alexandria, Egypt. The sphinxes and associated column are one of Alexandria's most important ancient monuments. <0/><0/> The Alexandria sphinxes should not be confused with the more well-known Great Sphinx located at Giza, just under 200 kilometers south-east of Alexandria."
+      "text": "Il y a deux sphinxes au sît de Pompey Pilier en Alexandria, Egypt. Le sphinxes et colonne associèe sont parmi des plus importantes monuments antiques d’Alexandria. <0/><0/> Il ne faut pas confondre l’Alexandria sphinxes avec le bien connu grand Sphinx située à Giza, un peu moins de 200 kilometres sud-est d’Alexandria."
     },
     "criticalDocuments": {
-      "title": "Critical Documents",
+      "title": "Documents Critiques",
       "releasePlan": {
-        "title": "Release Plan",
-        "text": "Read the release plan as it was made during the planning stage, and learn more about how the development evolved."
+        "title": "Plan De Sortie ",
+        "text": "Lisez le plan de sortie comme il était fabriqué pendant la phase de la plannification, et savez plus comment le développement a évolué."
       },
       "blogPost": {
-        "title": "Announcement Blog Post",
-        "text": "Read a brief primer on the Alexandria testnet and its objectives."
+        "title": "L'Article De Blog D'annonce",
+        "text": "Lisez une petite introduction sur Alexandria testnet et ses objectifs."
       }
     },
     "testnetGoals": {
-      "title": "Testnet Goals",
-      "subtitle": "The goals listed below are a simplified representation of our main objectives for the Alexandria testnet.",
+      "title": "Buts de Testnet",
+      "subtitle": "Les buts indiqué ci-dessous ce sont representations simplifié de nos objectifs principaux pour testnet Alexandria.",
       "goals": {
         "membershipModule": {
-          "title": "Cleaning up the membership module",
-          "text": "Tackling technical debt in the membership module and making it possible to transition to using memberships as the only core actor identifier in the system in future releases."
+          "title": "Nettoyage de module d’affiliation",
+          "text": "Faisant face à la dette technique dans la module d’affiliation comme le seul acteur principal identifiant du system dans la future sortie."
         },
         "substrateVersion": {
-          "title": "Start using Substrate v2.0.0 RC4",
-          "text": "We are transitioning to a new version of Substrate in order to stay up to date with a broad range of enhancements, and to limit how far behind we allow our growing codebase to become."
+          "title": "Commencer à utiliser Substrate v2.0.0 RC4",
+          "text": "Nous sommes en transition to vers une nouvelle version de Substrat afin de rester jusqu’à ce jour avec une large gamme d’améliorations, et limiter jusqu’où nous permettons la base de code croissante pour devenir."
         },
         "networkTesting": {
-          "title": "Enhancing our network testing",
-          "text": "Further maturing our network testing infrastructure to get one step closer to true end-to-end builds that secure an increasingly shorter development cycle."
+          "title": "Améliorer nos tests de réseau",
+          "text": "poursuivre la maturation de notre infrastructure de test de reseau, se rapprocher un peu plus de la véritables builds de bout en bout qui sécurisent un cycle de développement de plus en plus."
         }
       }
     },
     "roles": {
-      "title": "Incentivized Roles for the Alexandria Network"
+      "title": "Rôles incitatifs pour le réseau Alexandria"
     },
     "map": {
       "title": "Alexandria",
-      "text": "<0>Alexandria was founded in approximately 331 BC by Alexander the Great.</0> The city was best known for the Lighthouse of Alexandria, one of the Seven Wonders of the Ancient World, as well as its colossal Great Library.<1/><1/> Alexandria was the intellectual and cultural center of the ancient Mediterranean world for much of the Hellenistic age and late antiquity. It was at one time the largest city in the ancient world before being eventually overtaken by Rome.<1/><1/><2><0/> Read the blog post</2>"
+      "text": "<0>Alexandria était fondé en 331 BC par le Grand Alexander. </0> La ville était surtout connu pour le phare d’Alexandria, l’un des sept merveilles du monde antique, ainsi que sa colossal Grande Bibliothèque.<1/><1/> Alexandria le centre  intellectuel et culturel du monde Méditerranéen pendant une grande partie de l’époque hellénistique et l’antiquité tardive. C’était à une époque la plus grande ville dans le monde antique avant être finalement dépassé par Rome.<1/><1/><2><0/> Lisez le blog post</2>"
     }
   }
 }
