Fix cookie notice z-index, add loader to icons, comment out leads from the activities array, rename HR to Human Resources, update styles

--- a/src/locales/en/landing.json
+++ b/src/locales/en/landing.json
@@ -34,7 +34,7 @@
         "contentCuratorLead": "Content Curator Lead",
         "builder": "Builder",
         "builderLead": "Builder Lead",
-        "hr": "HR",
+        "hr": "Human Resources",
         "hrLead": "HR Lead",
         "marketer": "Marketer",
         "marketerLead": "Marketer Lead",
