Update investors section on the homepage, remove investors section from about page, rename about page title to Team, remove unnecessary locales, uninstall react-slick

--- a/src/locales/ru/about.json
+++ b/src/locales/ru/about.json
@@ -15,7 +15,7 @@
       }
     },
     "siteMetadata": {
-      "title": "О нас",
+      "title": "Team",
       "description": "Мы предлагаем не только отличную заработную плату и гибкие условия, но и прекрасную миссию, команду и время на создание чего-то принципиально нового."
     },
     "hero": {
@@ -26,9 +26,6 @@
       "title": "Наша команда",
       "subtitle": "Несмотря на то что мы из разных стран, все мы разделяем страсть к проектам с открытым исходным кодом, технологии блокчейн, распределенным системам, уважение к приватности, а также идеи построения нового интернета, основанного на принципах открытой отчетности и возможности создания форков.",
       "moreMembers": "Другие члены команды"
-    },
-    "investors": {
-      "title": "Наши инвесторы"
     },
     "positions": {
       "title": "Вакансии",
