--- a/src/locales/es/about.json
+++ b/src/locales/es/about.json
@@ -15,7 +15,7 @@
       }
     },
     "siteMetadata": {
-      "title": "About us",
+      "title": "Team",
       "description": "We don't just offer great compensation and flexibility, but the perfect mission, team and timing for you to build something that changes everything."
     },
     "hero": {
@@ -26,9 +26,6 @@
       "title": "Our team",
       "subtitle": "We come from different continents, but share a passion for open source, blockchain technology, distributed systems, privacy and building a new internet based on accountable and forkable institutions.",
       "moreMembers": "Load more team members"
-    },
-    "investors": {
-      "title": "Our investors"
     },
     "positions": {
       "title": "Open positions",
