--- a/src/locales/fr/landing.json
+++ b/src/locales/fr/landing.json
@@ -17,8 +17,8 @@
       }
     },
     "earnJoyCoins": {
-      "title": "Earn $JOY tokens",
-      "subtitle": "Here’s everything you need to know about Joystream and how to get started earning $JOY coins",
+      "title": "Participate & earn $JOY",
+      "subtitle": "Here’s everything you need to know about Joystream and how to get started earning $JOY tokens",
       "button": {
         "text": "Start earning"
       }
