--- a/src/locales/zh/onboarding.json
+++ b/src/locales/zh/onboarding.json
@@ -220,8 +220,8 @@
         "title": "Go to next video",
         "subtitle": "Joystream is a DAO, owned and governed by its token holders"
       },
-      "siteTitle": "We are giving away $12,000,000+ worth of $JOY tokens!",
-      "title": "We are giving away $12,000,000+<br/>worth of $JOY tokens!",
+      "siteTitle": "We’re allocating $12,000,000+ worth of $JOY to testnet participants!",
+      "title": "We're allocating $12,000,000+ <br/> worth of $JOY to testnet participants!",
       "subtitle": "Here’s everything you need to know about Joystream, and information about how to receive $JOY tokens...",
       "infoSection" : {
         "title": "What is Joystream?",
